--- a/.env
+++ b/.env
@@ -97,6 +97,7 @@ MAILCHIMP_SUBSCRIPTION_TYPE_INTEREST_GROUP_ID=
 MAILCHIMP_COALITIONS_NOTIFICATION_INTEREST_GROUP_ID=
 MAILCHIMP_INTEREST_IDS="{\"agriculture\":1,\"social\":2,\"culture\":3,\"economie\":4,\"education\":5,\"egalite\":6,\"emploi\":7,\"environement\":8,\"europe\":9,\"international\":10,\"jeunesse\":11,\"justice\":12,\"numerique\":13,\"sante\":14,\"securite\":15,\"sport\":16,\"territoire\":17,\"institution\":18,\"subscribed_emails_movement_information\":19,\"subscribed_emails_weekly_letter\":20,\"deputy_email\":21,\"subscribed_emails_local_host\":22,\"subscribed_emails_referents\":23,\"municipal_email\":25,\"senator_email\":26,\"COMMITTEE_FOLLOWER\":27,\"COMMITTEE_NO_FOLLOWER\":28,\"COMMITTEE_SUPERVISOR\":29,\"COMMITTEE_HOST\":30,\"REFERENT\":32,\"DEPUTY\":33,\"REC\":34,\"COORDINATOR\":35,\"PROCURATION_MANAGER\":36,\"ASSESSOR_MANAGER\":37,\"BOARD_MEMBER\":38,\"COMMITTEE_PROVISIONAL_SUPERVISOR\":39}"
 MAILCHIMP_COALITIONS_INTEREST_IDS='{"cause_subscription":"1","coalition_subscription":"2"}'
+MAILCHIMP_SEGMENT_TAG_IDS='{"certifié":"9"}'
 MAILCHIMP_CAMPAIGN_FOLDER_IDS='{}'
 MAILCHIMP_TEMPLATE_IDS='{}'
 MAILCHIMP_APPLICATION_REQUEST_TAG_IDS='{}'
