--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -292,6 +292,9 @@ security:
         ROLE_ADMIN_SCOPES:
             - ROLE_APP_ADMIN_SCOPE_ALL
 
+        ROLE_ADMIN_RIPOSTES:
+            - ROLE_APP_ADMIN_RIPOSTE_ALL
+
         ROLE_SUPER_ADMIN:
             - ROLE_ADMIN_DASHBOARD
             - ROLE_ADMIN_MEDIAS
@@ -348,6 +351,7 @@ security:
             - ROLE_ADMIN_THEMATIC_COMMUNITY
             - ROLE_ADMIN_FILES
             - ROLE_APP_ADMIN_ADHERENT_CONSEIL
+            - ROLE_ADMIN_RIPOSTES
 
         ROLE_CANDIDATE_REGIONAL_HEADED:
             - ROLE_CANDIDATE
